<resources>
    <string name="app_name">CampusPlacement</string>
    <string name="college_name">IIIT Delhi</string>
    <string name="campus_placement">Campus Placement</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="title_activity_student_dashboard">StudentDashboardActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="text_view_str_PostJob">Post a New Job Opening</string>
    <string name="text_view_str_Company_Details">Company Details</string>
    <string name="title_activity_admin__job__post">Activity Title</string>
    <string name="text_view_str_CompanyName">Company Name:*</string>
    <string name="text_view_str_ProfileType">Profile Type:</string>
    <string name="text_view_str_Designation">Designation:</string>
    <string name="text_view_str_Pay">Pay:</string>
    <string name="text_view_str_EventDate">Event Date:</string>
    <string name="text_view_str_LastDate">Last Date to Apply:*</string>
    <string name="text_view_str_Description">Description</string>
    <string name="text_view_str_Selection_Criteria">Selection Criteria:</string>
    <string name="text_view_str_Degree">Degree:*</string>
    <string name="text_view_str_CGPARequired">Min. CGPA Required:*</string>
    <string name="text_view_str_Other">Other Criteria:</string>
    <string name="button_str_Post">Post</string>
    <string name="button_str_Cancel">Cancel</string>
    <string name="text_view_str_Location">Location:*</string>
    <string name="required">This field is required!</string>
    <string name="Tab_Item_All_students">All Students</string>
    <string name="individual_search_searchby"></string>

    <string-array name="Degrees">
        <item>B.Tech</item>
        <item>M.Tech</item>
        <item>Ph.D</item>
        <item>All</item>
    </string-array>

    <string-array name="Searchby">
        <item>Roll no</item>
        <item>Name</item>
    </string-array>


    <string-array name="Branch">
        <item>CSE</item>
        <item>ECE</item>
        <item>CB</item>
        <item>All</item>
    </string-array>

    <string-array name="Boolean_Yes_No">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string-array name="Gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string name="button_str_chooseDegree">Choose Degrees</string>
    <string name="title_activity_admin_job_posts">AdminJobPosts</string>
    <string name="title_activity_manage_admin">Manage_admin</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_manage__admin">Manage_Admin</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_temp">tempActivity</string>
    <string name="forgotPasswordText">Enter your email address and we will send you a link to reset your password</string>
    <string name="registered_email_address">Registered email address</string>
    <string name="reset_password">Reset password</string>

</resources>
