<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.manis.mc_1.Admin_Job_Post"
    tools:showIn="@layout/content_admin__job__post"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp"
        android:focusableInTouchMode="true"
        android:focusable="true"
        >


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/text_view_str_Company_Details"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/text_view_str_CompanyName" />

                <EditText
                    android:id="@+id/edit_text_Company_Name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:layout_weight="0.6"
                    android:ems="10" />


            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="@string/text_view_str_Location" />

            <EditText
                android:id="@+id/edit_text_Location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_weight="0.6"
                android:ems="10" />


        </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/text_view_str_ProfileType" />

                <EditText
                    android:id="@+id/ProfileType"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:ems="10" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/text_view_str_Designation" />

                <EditText
                    android:id="@+id/Designation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:ems="10" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/text_view_str_Pay" />

                <EditText
                    android:id="@+id/Pay"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:ems="10" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/text_view_str_EventDate" />

                <EditText
                    android:id="@+id/edit_text_Event_Date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:focusableInTouchMode="false"
                    android:ems="10"
                    android:focusable="false"
                    android:inputType="date" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/text_view_str_LastDate" />

                <EditText
                    android:id="@+id/Edit_text_Last_Date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:focusableInTouchMode="false"
                    android:ems="10"
                    android:focusable="false"
                    android:inputType="date" />


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/text_view_str_Description"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Enter Company Description Here" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/text_view_str_Selection_Criteria"
                android:textSize="20sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/text_view_str_Degree" />

                <MultiAutoCompleteTextView
                    android:id="@+id/AC_text_view_Degrees"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:hint="@string/button_str_chooseDegree" >

                </MultiAutoCompleteTextView>

            </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="@string/text_view_str_CGPARequired" />

            <EditText

                android:id="@+id/CGPARequired"
                android:layout_width="0dp"
                android:inputType="numberDecimal"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:ems="10" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="@string/text_view_str_Other" />

            <EditText
                android:id="@+id/OtherCriteria"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:ems="10" />



        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">

            <Button
                android:id="@+id/Button_Post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/button_str_Post" />

            <Button
                android:id="@+id/button_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/button_str_Cancel" />



        </LinearLayout>

    </LinearLayout>
</ScrollView>
</LinearLayout>